--- a/requirements.txt
+++ b/requirements.txt
@@ -11,6 +11,7 @@ django-phonenumber-field==4.0.0
 djangorestframework==3.11.1
 idna==3.4
 phonenumbers==8.12.6
+mailersend==0.5.8
 Pillow==10.0.0
 pypng==0.20220715.0
 pytz==2023.3
